# kipi-plugins

./: CMakeLists.txt
ipfs/: CMakeLists.txt  Messages.sh  ipfs.kde4  ipfsglobaluploadapi.cpp  ipfsglobaluploadapi.h  ipfsimageslist.cpp  ipfsimageslist.h  ipfswindow.cpp  ipfswindow.h  kipiplugin_ipfs.desktop.cmake  kipiplugin_ipfsui.rc  plugin_ipfs.cpp  plugin_ipfs.h
ipfs/icons/: .directory  CMakeLists.txt
